app/css/main.css
html, body {
    min-height: 100%;
    max-width: 100%;
    overflow-x: hidden;
}

body {
	padding-top: 85px;
    padding-bottom: 25px;
    background-image: url("../img/OW-bg-pattern.svg");
    background-size: cover;
}

.panel {
    position: relative;
    border: none;
}

hr {
    margin-top: 10px;
    margin-bottom: 10px;
}

hr.tight {
    margin-top: 0px;
}

.translucent {
    background-color: rgba(255, 255, 255, .5);
}

.loader {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.65);
    text-align: center;
}

.loader .spinner {
    position: relative;
    top: 35%;
    margin-left: auto;
    margin-right: auto;
    border: 16px solid #29364D; /* Light grey */
    border-top: 16px solid #f99e1a; /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 1.2s linear infinite;
}

#form-username {
    margin-top: 3%;
    text-align: center;
}

.error {
    margin-top: 15%;
}



 /* ----- ANIMATIONS ----- */

@keyframes spin {
    from { transform: scale(1) rotate(0deg);}
    to { transform: scale(1) rotate(360deg);}
}

@-webkit-keyframes spin {
    from { -webkit-transform: rotate(0deg);}
    to { -webkit-transform: rotate(360deg);}
}




/*================
  MEDIA QUERIES
 ===============*/

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    
    hr {
        margin-top: 20px;
        margin-bottom: 20px;
    }

}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}

